2010-05-23  Roman Gershman  <romange@google.com>

Reviewed by Darin Fisher.

        [Chromium] Suggestion popup is not closed when the view is scrolled.
        https://bugs.webkit.org/show_bug.cgi?id=38640

        This bug appears on both Windows and Linux platforms.
        Mac OS, however handles window messages differently and
        closes popup menu in RenderWidgetHostViewMac::Destroy().

        No tests were added because test_shell does not support suggestion
        popup.

        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::invalidateContentsForSlowScroll):
        (WebKit::ChromeClientImpl::scroll):

git-svn-id: svn://svn.chromium.org/blink/trunk@60044 bbb929c8-8fbe-4397-9dbb-9b2b20218538