third_party/WebKit/WebKit/chromium/src/ChromeClientImpl.cpp
@@ -501,6 +501,7 @@ void ChromeClientImpl::invalidateContentsAndWindow(const IntRect& updateRect, bo
 
 void ChromeClientImpl::invalidateContentsForSlowScroll(const IntRect& updateRect, bool immediate)
 {
+    m_webView->hidePopups();
     invalidateContentsAndWindow(updateRect, immediate);
 }
 
@@ -508,6 +509,7 @@ void ChromeClientImpl::scroll(
     const IntSize& scrollDelta, const IntRect& scrollRect,
     const IntRect& clipRect)
 {
+    m_webView->hidePopups();
     if (m_webView->client()) {
         int dx = scrollDelta.width();
         int dy = scrollDelta.height();
